src/main/resources/Krakatau-master/tests/assembler/bad/dupsymdef.j
.class public whocares
.super java/lang/Object

.const [x1] = Int 4
.const [x1] = Int 5
.end class
